# ScreenTranslator

./: .gitignore  README.md  main-onefile.spec  main.py  main.spec  pyproject.toml  requirements.txt  screen_translator.py
screen_translator/: __init__.py  capture.py  config.py  hotkeys.py  ocr_utils.py  ort_ep.py  pipeline.py  render.py  repair_ort_dml.py  settings.py  tray.py  ui_region.py  ui_result.py
tools/: diagnose_ort.py  diagnose_ort_cuda.py
