[project]
name = "screen-translator"
version = "0.1.0"
description = "屏幕区域 OCR 与翻译工具"
requires-python = ">=3.10"
dependencies = [
    "mss>=9.0.0",
    "pystray>=0.19.5",
    "pynput>=1.7.6",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "rapidocr-onnxruntime>=1.3.0",
    "onnxruntime>=1.16.0",
    "deep-translator>=1.11.4",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["screen_translator"]
