[project]
name = "screen-translator"
version = "0.1.0"
description = "Screen region OCR and Chinese-to-English translation. 屏幕区域 OCR 与中译英。"
requires-python = ">=3.10"
dependencies = [
    "mss>=9.0.0",
    "pystray>=0.19.5",
    "pynput>=1.7.6",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "rapidocr-onnxruntime>=1.3.0",
    # Windows: DirectML. rapidocr also pulls "onnxruntime" (CPU); both may install and overwrite DLLs.
    # After uv sync, if DmlExecutionProvider is missing, run: uv run screen-translator-repair-ort
    # Windows：rapidocr 会拉取 onnxruntime(CPU)，可能与 directml 冲突；若无 DML EP，运行 screen-translator-repair-ort。
    "onnxruntime-directml>=1.20.0,<1.21.0; sys_platform == 'win32'",
    "onnxruntime>=1.20.0,<1.21.0; sys_platform != 'win32'",
    "deep-translator>=1.11.4",
]

[project.scripts]
screen-translator-repair-ort = "screen_translator.repair_ort_dml:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["screen_translator"]
